# tds_dashboard

./: .gitignore  .gitmodules  Cargo.toml  README.md  Trunk.toml  esbuild.js  index.html  index.scss  package-lock.json  package.json  style.css
js/: chart.js
src/: main.rs
