[package]
name = "tds_dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr", "default"]}
wasm-bindgen-futures = {  version = "0.4.42"}
serde = { version = "1.0.205", features = ["derive"] }
serde_json = { version = "1.0.122"}
wasm-logger = "0.2.0"
log = { version = "0.4.22", features = [] }
reqwasm = { version = "0.5.0", features = ["http"]}
web-sys = { version = "0.3.69", features = ["HtmlCanvasElement", "CanvasRenderingContext2d"] }
reqwest = { version = "0.12.5", features = ["json"] }
gloo-timers = "0.3.0"
wasm-bindgen = "0.2.95"
rand = "0.8.5"
yew-hooks = "0.3.2"
yew-chart = {version = "0.6.0"}
chrono = "0.4.38"
